--- a/templates/bio.html
+++ b/templates/bio.html
@@ -149,6 +149,7 @@
 	 	<p class='caption'><strong>ARTISTS</strong></p>
 	 </div>
 
+<script type="text/javascript" src="../static/js/header.js"></script>
 <script type="text/javascript" src="../static/js/expandPhoto.js"></script>
 </body>
 </html>
