--- a/static/css/bio.css
+++ b/static/css/bio.css
@@ -6,10 +6,36 @@
     background-image: url('../img/background/bio.jpg');
 }
 
+body{
+    transition: 0.3s ease;
+}
+
 img{
     box-shadow:0px 0px  10px 5px #aaa;
     margin-top: 70px;
     cursor: pointer;
+}
+
+#scroll-button{
+    z-index: 200;
+    position: fixed;
+    transform: scale(0, 0);
+    color: gray;
+    left: 50%;
+    bottom: 20px;
+    opacity: 0;   
+    transition: 0.3s ease;
+}
+
+#scroll-button.show{
+    transition: 0.3s ease;
+    opacity: 100;
+    transform: scale(4,4);
+}
+
+#scroll-button:hover{
+    cursor: pointer;
+    color: #254048;
 }
 
 .wrapper h2{
